# core

./: .gitignore  FRAMEWORK_PROPOSALS.md  QUEUE_FEATURES_DEMO.md  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  secret-history-audit.yml  security-history.yml
.usta/: autopilot.tsv  claude.py  cli.py  config.py  knowledge.json  lessons.jsonl  lessons.py  openrouter.py  planner.py  reviewer.py  runner.py  session.json  static_checks.py  verifier.py  warm.py
.usta/tasks/: state.json
cara/: README.md  helpers.py
cara/ai/: AIProvider.py  AIResponse.py  AIServiceProvider.py  Client.py  Parsing.py  __init__.py  exceptions.py
cara/architecture/: BarrelGenerator.py  Finding.py  ImportGraph.py  Manifest.py  __init__.py  _ast_utils.py
cara/authentication/: Authentication.py  AuthenticationProvider.py  LoginAttemptTracker.py  __init__.py  password.py
cara/authorization/: AuthorizationProvider.py  AuthorizationResponse.py  Gate.py  Policy.py  __init__.py
cara/broadcasting/: BroadcastEvent.py  Broadcasting.py  BroadcastingProvider.py  Channel.py  ChannelRegistry.py  ConnectionManager.py  __init__.py  helpers.py
cara/cache/: Cache.py  CacheProvider.py  Observer.py  VersionedCache.py  __init__.py  observer.py
cara/commands/: AutoReloadMixin.py  BlockingCommandMixin.py  BootlessCommandRunner.py  Cli.py  Command.py  CommandBase.py  CommandLoader.py  CommandProvider.py  CommandRegistry.py  CommandRunner.py  MakesAutoReload.py  MakesBlockingCommand.py  MakesReloadable.py  ReloadableMixin.py  __init__.py  _optional.py  cli.py
cara/concurrency/: BackgroundTasks.py  __init__.py  background_tasks.py
cara/conductors/: __init__.py
cara/configuration/: Configuration.py  ConfigurationProvider.py  __init__.py
cara/container/: Container.py  exceptions.py
cara/context/: ExecutionContext.py  Tenancy.py  __init__.py
cara/decorators/: Accessor.py  Authorization.py  Command.py  Events.py  Mutator.py  Schedule.py  Scope.py  __init__.py  accessor.py  authorization.py  command.py  events.py  mutator.py  route.py  schedule.py  scope.py
cara/eloquent/: DatabaseManager.py  EloquentProvider.py  Integrity.py  Transactions.py  __init__.py  exceptions.py  integrity.py  transactions.py
cara/encryption/: Crypt.py  EncryptionProvider.py  Hash.py  __init__.py
cara/environment/: Environment.py  __init__.py
cara/events/: Event.py  EventProvider.py  UserRegisteredEvent.py  __init__.py
cara/exceptions/: ExceptionProvider.py  __init__.py
cara/facades/: AI.py  Auth.py  Broadcast.py  Cache.py  Config.py  Console.py  Crypt.py  DB.py  Event.py  Facade.py  Feature.py  Gate.py  Hash.py  Http.py  Image.py  Loader.py  Log.py  Mail.py  Notification.py  Queue.py  RateLimiter.py  Route.py  Schedule.py  Validation.py  View.py  __init__.py
cara/features/: FeatureManager.py  __init__.py
cara/filtering/: Filter.py  FilterSet.py  Pipeline.py  Relations.py  Request.py  Sorter.py  __init__.py  (+1 more)
cara_framework.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
docs/: DOCTRINE.md  GUARDPACK.md
(+900 files in other folders)
